tests/NormalTests/paczka1/fuzzy1/73989992.err
Error in line 1: pAV5iKKh A13 96,1
Error in line 21: LQ7lX A295 98,8
Error in line 30: qpaN45KXwe A831 19,9
Error in line 25: T5Kvy0tiua7 A668 275,7
